<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ImageSearchToDo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="searchText">Search</string>
    <string name="keyWord">Key Word</string>
    <string name="advance">Advance</string>
    <string name="title_activity_image_result">ImageResult</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="title_activity_image_setting">ImageSetting</string>
    <string name="ASO">Advance search options</string>
    <string name="imageSize">Image Size</string>
    <string name="colorFilter">Color Filter</string>
    <string name="imageType">Image Type</string>
    <string name="siteFilter">Site Filter</string>
    <string name="save">Save</string>
    <string-array name="imageSizes">
        <item>small</item>
        <item>medium</item>
        <item>large</item>
        <item>extra-large</item>
    </string-array>
    <string-array name="colorFilters">
        <item>black</item>
        <item>blue</item>
        <item>brown</item>
        <item>gray</item>
        <item>green</item>
    </string-array>
    <string-array name="imageTypes">
        <item>faces</item>
        <item>photo</item>
        <item>clip</item>
        <item>art</item>
        <item>line art</item>
    </string-array>

</resources>
